Correct mappings for Xbox One S gamepad with new firmware

Microsoft has released a firmware update that changes HID mapping
to be more Android-friendly. In fact, it would already be mapped
perfectly by our existing unknown gamepad mapping code on Android.
Unfortunately, since the device name didn't change, we're now using
the wrong mapping because we made a special one for the older firmware.
This CL removes the old mapping so the unknown gamepad mapping code
will now handle this controller properly on Android.

For Mac and Linux, I have replaced the existing mapping for the old
firmware with a new mapping for the current firmware.

BUG=664716
TEST=http://html5gamepad.com/

Review-Url: https://codereview.chromium.org/2494823005
Cr-Commit-Position: refs/heads/master@{#432119}

Former-commit-id: 5f47e3fc8435f1f90d88133522067b7669251c2a